# miniNumpy

./: .gitignore  CMakeLists.txt  README.md  array2d_usage  basic_usage  test_array1d  test_array2d
bindings/: python_bindings.cpp
examples/: array2d_usage.cpp  basic_usage.cpp
include/miniNumpy/: Array1D.hpp  Array2D.hpp  functions.hpp
tests/: test_array1d.cpp  test_array2d.cpp  test_python_bindings.py
